--- a/src/pages/interes-simple.astro
+++ b/src/pages/interes-simple.astro
@@ -4,10 +4,12 @@ import Layout from "@layout/Layout.astro";
 import IntSimple from "@components/intSimple.astro";
 ---
 
-<Layout title="Calculadora Financiera">
-  <section class="md:px-32  h-screen flex flex-col justify-center items-center">
+<Layout title="Página de Interes Simple">
+  <section
+    class="md:selection:px-32 flex flex-col justify-center items-center h-screen"
+  >
     <h2 class="text-xl text-rose-600 py-4 font-bold">
-      Calculadora finaciera con Astro
+      Calculadora de Interes Simple
     </h2>
 
     <IntSimple />
