--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import IntSimple from "@components/intSimple.astro";
 ---
 
 <Layout title="Calculadora Financiera">
-  <section class="md:px-32  h-screen flex flex-col justify-center items-center">
+  <section class="md:px-32  py-4 md:py-16 flex flex-col justify-center items-center">
     <h2 class="text-xl text-rose-600 py-4 font-bold">
       Calculadora finaciera con Astro
     </h2>
