--- a/src/components/global/navMobile.astro
+++ b/src/components/global/navMobile.astro
@@ -1,18 +1,29 @@
 ---
+import { Icon } from "astro-icon/components";
+
 interface Link {
   name: string;
   href: string;
+  icon: string;
 }
 
 const NavLinks: Link[] = [
-  { name: "Home", href: "/" },
-  { name: "Int. Simple", href: "/interes-simple" },
-  { name: "Int. Compuesto", href: "/interes-compuesto" },
+  { name: "Home", href: "/", icon: "mdi:home" },
+  {
+    name: "Simple",
+    href: "/interes-simple",
+    icon: "mdi:calculator-variant-outline",
+  },
+  {
+    name: "Compuesto",
+    href: "/interes-compuesto",
+    icon: "mdi:calculator-variant-outline",
+  },
 ];
 ---
 
 <nav
-  class="gap-4 justify-between items-center h-14 bg-zinc-800 flex md:hidden px-4 sticky inset-x-0 bottom-0"
+  class="gap-4 justify-around items-center h-14 bg-zinc-950 flex md:hidden px-4 sticky inset-x-0 bottom-0 border-t"
 >
   {
     NavLinks.map((link) => (
@@ -20,6 +31,7 @@ const NavLinks: Link[] = [
         href={link.href}
         class="text-white hover:text-rose-600 flex flex-col justify-center items-center"
       >
+        <Icon name={link.icon} class={"w-6 h-6"} />
         {link.name}
       </a>
     ))
