--- a/src/components/intSimple.astro
+++ b/src/components/intSimple.astro
@@ -1,4 +1,5 @@
 ---
+import { Icon } from "astro-icon/components";
 import Card from "./Card.astro";
 ---
 
@@ -43,32 +44,72 @@ import Card from "./Card.astro";
     >
   </form>
 
-  <!-- Contenedor para mostrar el resultado -->
-  <p id="resultado" class="mx-4 text-lg font-semibold"></p>
+  <div class="flex justify-around gap-6 py-4">
+    <!-- Contenedor para mostrar el resultado -->
+    <div class="flex flex-col items-center">
+      <p class="mx-4 text-lg font-semibold">
+        Interés simple: <span id="resultado"></span>
+      </p>
+      <button
+        class="btn"
+        data-clipboard-action="copy"
+        data-clipboard-target="#resultado"
+      >
+        <Icon name="mdi:clipboard-multiple-outline" /></button
+      >
+    </div>
+    <div class="flex flex-col items-center">
+      <p class="mx-4 text-lg font-semibold">
+        Total: <span id="resultado_acumulado"></span>
+      </p>
+      <button
+        class="btn"
+        data-clipboard-action="copy"
+        data-clipboard-target="#resultado_acumulado"
+      >
+        <Icon name="mdi:clipboard-multiple-outline" /></button
+      >
+    </div>
+  </div>
 </Card>
 
 <script is:inline>
   document
     .querySelector("#calculo-form")
     .addEventListener("submit", function (event) {
-      event.preventDefault(); // Evita que el formulario se envíe y recargue la página
+      event.preventDefault();
 
-      // Obtén los valores de entrada y conviértelos a números
       const capital = Number(document.querySelector("#capital").value);
       const interes_anual =
         Number(document.querySelector("#interes_anual").value) / 100;
       const tiempo = Number(document.querySelector("#tiempo").value);
 
-      // Validación simple
       if (capital > 0 && interes_anual > 0 && tiempo > 0) {
         // Calcula el interés simple
         const interes_simple = capital * interes_anual * tiempo;
+        const total_interes_simple = capital + interes_simple;
+
         // Muestra el resultado en la UI
         document.querySelector("#resultado").textContent =
-          `Interés simple: ${interes_simple.toFixed(2)}`;
+          ` ${interes_simple.toFixed(2)}`;
+
+        document.querySelector("#resultado_acumulado").textContent =
+          `${total_interes_simple.toFixed(2)}`;
       } else {
         document.querySelector("#resultado").textContent =
           "Por favor, ingresa valores válidos en todos los campos.";
       }
     });
+
+  // Configuración de ClipboardJS para copiar texto
+  const clipboard = new ClipboardJS(".btn");
+
+  clipboard.on("success", function (e) {
+    console.info("Texto copiado con éxito:", e.text);
+    e.clearSelection();
+  });
+
+  clipboard.on("error", function (e) {
+    console.error("Error al copiar:", e);
+  });
 </script>
