--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import Footer from "@components/global/footer.astro";
 import Header from "@components/global/header.astro";
 import NavMobile from "@components/global/navMobile.astro";
-
+import { ViewTransitions } from "astro:transitions";
 interface Props {
   title: string;
 }
@@ -14,6 +14,12 @@ const { title } = Astro.props;
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2964007773702778"
   crossorigin="anonymous"></script>
+
+<script
+  is:raw
+  src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"
+></script>
+
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -22,8 +28,11 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-	<!-- ads -->
+    <!-- ads -->
     <meta name="google-adsense-account" content="ca-pub-2964007773702778" />
+
+    <!-- ViewTransitions  -->
+    <ViewTransitions />
   </head>
   <body>
     <Header />
@@ -32,32 +41,3 @@ const { title } = Astro.props;
     <NavMobile />
   </body>
 </html>
-
-<!-- <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style> -->
