--- a/src/pages/interes-simple.astro
+++ b/src/pages/interes-simple.astro
@@ -6,7 +6,7 @@ import IntSimple from "@components/intSimple.astro";
 
 <Layout title="Página de Interes Simple">
   <section
-    class="md:px-32 py-4 flex flex-col justify-center items-center "
+    class="md:px-32 py-4 md:py-24 flex flex-col justify-center items-center "
   >
     <h2 class="text-xl text-rose-600 py-4 font-bold">
       Calculadora de Interes Simple
