--- a/src/pages/interes-simple.astro
+++ b/src/pages/interes-simple.astro
@@ -1,17 +1,17 @@
 ---
 import Layout from "@layout/Layout.astro";
 
-import IntSimple from "@components/intSimple.astro";
+import IntSimple from "@components/intSimple";
 ---
 
 <Layout title="Página de Interes Simple">
   <section
-    class="md:px-32 py-4 md:py-24 flex flex-col justify-center items-center "
+    class="md:px-32 py-4 md:py-24 flex flex-col justify-center items-center"
   >
     <h2 class="text-xl text-rose-600 py-4 font-bold">
       Calculadora de Interes Simple
     </h2>
 
-    <IntSimple />
+    <IntSimple client:load />
   </section>
 </Layout>
