--- a/src/pages/interes-compuesto.astro
+++ b/src/pages/interes-compuesto.astro
@@ -13,6 +13,6 @@ const title: string = "Interes Compuesto";
       Calculadora de Interes Compuesto
     </h2>
 
-    <IntCompuesto />
+    <IntCompuesto client:load />
   </section>
 </Layout>
